修改项目部署目录为/www/wwwroot/etermaiweb

--- a/docs/快速部署指南.md
+++ b/docs/快速部署指南.md
@@ -75,7 +75,7 @@ sudo systemctl restart etermaiweb
 
 ```bash
 # 手动拉取代码
-cd /var/www/etermaiweb
+cd /www/wwwroot/etermaiweb
 sudo git pull origin main
 sudo systemctl restart etermaiweb
 ```
